<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="2">
        <TableRow>
            <TextView
                android:id="@+id/latitude"  
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/latitude"
                android:fontFamily="@font/digital"
            />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/longitude"  
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/longitude" 
                android:fontFamily="@font/digital"
            />
        </TableRow>
        <TableRow
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            >
            <TextView
                android:layout_column="0"
                android:id="@+id/speed"
                android:gravity="center_horizontal"
                android:textSize="171sp"
                android:text="@string/speed"
                android:padding="3dip" 
                android:fontFamily="@font/digital"
            />
            <TextView
                android:layout_column="1"
                android:id="@+id/kmh"
                android:textSize="51sp"
                android:gravity="left"
                android:text="@string/kmh"
                android:textStyle="bold" 
                android:padding="3dip" 
                android:fontFamily="@font/digital"
            />
        
        </TableRow>
        <TableRow
            android:gravity="bottom|center_horizontal"
            >
            <TextView
                android:id="@+id/maxSpeed"  
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="41sp"
                android:text="@string/maxspeed"
                android:gravity="center"
                android:fontFamily="@font/digital"
            />
            
        </TableRow>
        
</TableLayout>